# math_cpp

./: .dockerignore  CMakeLists.txt  Dockerfile  PythonImprovements.md  README.md  experiments.cpp  fragment.frag  fragment_mb.frag  main.cpp  mandelbrot.hpp  pyproject.toml  render_mandelbrot_imgui.cpp  render_mandelbrot_opencv_img.cpp  render_mandelbrot_opengl.cpp  render_mandelbrot_opengl_base.cpp  render_mandelbrot_opengl_shader.cpp  run_gui_mandelbrot.cpp  run_mandelbrot.cpp  utilities.hpp  vertex.vert
renderers/imgui/: CMakeLists.txt
renderers/opencv_img/: CMakeLists.txt
renderers/opengl_base/: CMakeLists.txt  fragment_mb.frag
renderers/opengl_shader/: CMakeLists.txt  render_mandelbrot_opengl_shader.cpp
src/cpp/: colormaps.hpp  mandelbrot.hpp  shaders_mandelbrot.hpp  timer.hpp  utilities.hpp  utilities_opencv.hpp  utilities_shaders.hpp
src/python/: draw_quad.py  draw_scaling_illustration.py  mandelbrod-opengl-img.py  mandelbrod-opengl-window.py  mandelbrot.py  render_mandelbrot_img.py  render_somplex_set.py
src/python/shaders/mandelbrod/: fragment.frag
